--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "dev": "nodemon dist/index.js",
     "watch": "tsc --watch",
     "lint-fail": "eslint \"{src,apps,libs}",
-    "start": "nodemon dist/index.js",
+    "build:dev": "npm run build && npm run dev",
+    "build:start": "npm run build && npm run start",
+    "start": "node dist/index.js",
     "test": "jest src/tests",
+    "lint": "npx eslint ",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "keywords": [],
